# maibot-plugin-sdk

./: CHANGELOG.md  README.md  pyproject.toml
docs/: guide.md  migration-guide.md
maibot_sdk/: __init__.py  config.py  context.py
maibot_sdk/capabilities/: chat.py  emoji.py  llm.py  maisaka.py  message.py  render.py  statistics.py
tests/: test_sdk.py
