[project]
name = "maibot-plugin-sdk"
version = "2.6.0"
description = "MaiBot 插件开发 SDK"
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "MaiBot Team" },
]
keywords = ["maibot", "plugin", "sdk", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Mai-with-u/maibot-plugin-sdk"
Repository = "https://github.com/Mai-with-u/maibot-plugin-sdk"
Issues = "https://github.com/Mai-with-u/maibot-plugin-sdk/issues"
Documentation = "https://github.com/Mai-with-u/maibot-plugin-sdk/blob/main/docs/guide.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["maibot_sdk*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["^tests/"]

[tool.pyright]
include = ["maibot_sdk"]
exclude = ["tests"]
pythonVersion = "3.10"

[[tool.mypy.overrides]]
module = "maibot_sdk.compat.*"
warn_return_any = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["import-not-found", "misc", "no-any-return", "no-untyped-call", "type-arg", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
